Fix overflow of long words in titles

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,3 +17,7 @@ body {
 .text-muted a {
   color: inherit;
 }
+
+.list-group-item {
+  overflow: hidden;
+}
